@@ -1,10 +1,0 @@
-<?xml version="1.0"?>
-<!DOCTYPE catalog PUBLIC "-//OASIS//DTD Entity Resolution XML Catalog V1.0//EN"
-	"http://www.oasis-open.org/committees/entity/release/1.0/catalog.dtd">
-
-<!-- $NetBSD: catalog,v 1.2 2003/12/23 22:25:29 wiz Exp $ -->
-
-<catalog xmlns="urn:oasis:names:tc:entity:xmlns:xml:catalog">
-  <public publicId="-//OASIS//DTD Simplified DocBook XML V1.1b1//EN" uri="sdocbook.dtd" />
-  <public publicId="-//OASIS//DTD Simplified DocBook RefEntry XML V1.1b1//EN" uri="sdocbookref.dtd" />
-</catalog>
