@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6046 2004/05/28 11:10:44 dillo Exp $
+$NetBSD: CHANGES,v 1.6047 2004/05/28 16:40:34 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -2669,3 +2669,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated deliver to 2.1.14nb1 [wiz 2004-05-28]
 	Updated cvsweb to 3.0.1 [lukem 2004-05-28]
 	Removed raw [dillo 2004-05-28]
+	Updated docbook-simple to 1.1.b3 [minskim 2004-05-28]
